--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    font-family: sans-serif;
+}
+
 header{
     text-align: center;
 }
@@ -19,6 +23,8 @@ main{
     width: 50vw;
 }
 
-#preview{
-    width: 50vw;
+#preview-area{
+    width: 90%;
+    overflow-wrap: break-word;
+    overflow: auto;
 }
